--- a/BMS/dialog.ui
+++ b/BMS/dialog.ui
@@ -42,7 +42,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="aimiplineEdit"/>
+      <widget class="QLineEdit" name="aimiplineEdit">
+       <property name="text">
+        <string>192.168.1.253</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -62,7 +66,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="aimportlineEdit"/>
+      <widget class="QLineEdit" name="aimportlineEdit">
+       <property name="text">
+        <string>1030</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -76,7 +84,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="localportlineEdit"/>
+      <widget class="QLineEdit" name="localportlineEdit">
+       <property name="text">
+        <string>4000</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
