动态曲线待完善

--- a/BMS/mainwindow.qrc
+++ b/BMS/mainwindow.qrc
@@ -4,5 +4,7 @@
         <file>images/保护.ico</file>
         <file>images/报警.ico</file>
         <file>images/正常.ico</file>
+        <file>images/BMS.ico</file>
+        <file>images/BMS.png</file>
     </qresource>
 </RCC>
